# realtime-canvas-system

./: .gitignore  Cargo.toml
pkg/: Cargo.toml  build-all.sh
pkg/src/: main.rs
realtime-canvas-pkg/: Cargo.toml  build-all.sh
realtime-canvas-pkg/src/: main.rs
realtime-canvas-server/: Cargo.toml
realtime-canvas-server/src/: connection.rs  connection_tx_storage.rs  lib.rs  main.rs  server.rs  server_state.rs  session.rs
realtime-canvas-system/: Cargo.toml
realtime-canvas-system/src/: client_leader_document.rs  client_replica_document.rs  document_command.rs  document_storage.rs  lib.rs  materialize.rs  message.rs  server_leader_document.rs  traits.rs  transaction_manager.rs  transactional_storage.rs  types.rs
realtime-canvas-system/tests/: oval.rs
realtime-canvas-wasm/: Cargo.toml  build.sh
realtime-canvas-wasm/demo/: package-lock.json  package.json  tsconfig.json
realtime-canvas-wasm/examples/: translate.rs
realtime-canvas-wasm/src/: lib.rs  session_state.rs
server/: Cargo.toml
server/src/: admin.rs  admin_console.rs  connection.rs  connection_tx_storage.rs  document_file.rs  lib.rs  main.rs  server.rs  server_state.rs  session.rs
server/src/handlers/: admin.rs  files.rs  mod.rs
server/templates/: admin-index.html  base.html  simple-list.html  simple-pre.html
server/templates/admin/: show-file.html
system/: Cargo.toml
system/src/: client_follower_document.rs  client_replica_document.rs  document.rs  document_command.rs  document_command_transaction.rs  document_storage.rs  (+9 more)
wasm/: Cargo.toml  README.md  build.sh
web/: Cargo.toml
(+31 files in other folders)
