[package]
name = "realtime-canvas-pkg"
version = "0.1.0"
authors = ["Kim Seungha <seungha.me@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realtime-canvas-server = { path = "../realtime-canvas-server" }
log = "0.4"