[package]
name = "realtime-canvas-system"
version = "0.1.0"
authors = ["Kim Seungha <seungha.me@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"] }
bincode = "1.3.2"
serde_json = "1.0"