[package]
name = "server"
version = "0.1.0"
authors = ["Kim Seungha <seungha.me@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
tokio = "0.2"
log = "0.4"
env_logger = "0.8.3"
system = { path = "../system" }